[build-system]
requires = [ "setuptools>=40.6.0", "wheel>=0.34.2",]
build-backend = "setuptools.build_meta"

[project]
name = "dummy_wx"
version = "0.3.0"
description = "This module does nothing."
readme = "README.rst"
keywords = [ "wxpython", "sphinx",]
dynamic = [ "requires-python", "classifiers", "dependencies",]
[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/dummy_wx"
"Issue Tracker" = "https://github.com/domdfcoding/dummy_wx/issues"
"Source Code" = "https://github.com/domdfcoding/dummy_wx"

[tool.importcheck]
